fixed overflowing long url in 'website' field in edit/new blog preview. also, added craft/plugins/import/vendor to .gitignore

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -820,6 +820,7 @@ main.single > .post > h3.my-content {
 .website-link {
     border-top: 1px solid #C8D4E9;
     padding: 0 0 1em 0;
+    overflow-wrap: break-word;
 }
 .attachments {
     border-bottom: 1px solid #C8D4E9;
